# code-tribunal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  bad.diff  good.diff  pyproject.toml  t2.md
apps/api/code_council/: __init__.py  agent_config.py  analyzer.py  cli.py  fixes.py  github.py  github_webhook.py  mcp_server.py  multimodal.py  prompts.py  server.py  utils.py
apps/api/code_council/council/: __init__.py  analyzer.py  language.py  models.py  multimodal.py
apps/api/code_council/council/scanners/: __init__.py  security.py
apps/api/code_council/scanners/: performance.py
apps/api/code_council/tribunal/: __init__.py  band_adapter.py  coordination.py  fixtures.py  headless.py  llm.py  protocol.py  providers.py  runner.py
apps/api/tests/: conftest.py  test_cli.py  test_coordination.py  test_deterministic_verdicts.py  test_doctor.py  test_fixtures.py  test_init.py  test_llm.py  test_mcp_server.py  test_review_pr.py  test_version.py  test_waitlist.py
apps/web/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/public/: sw.js
apps/web/src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/about/: page.tsx
apps/web/src/app/(app)/council/: layout.tsx  page.tsx
apps/web/src/app/(app)/tribunal/: layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/api/waitlist/: route.ts
apps/web/src/app/design/: page.tsx
apps/web/src/app/tribunal/: page.tsx
apps/web/src/components/effects/: matrix-rain.tsx
apps/web/src/components/landing/: coming-soon.tsx  court-roster.tsx  hero.tsx  install-section.tsx  landing-footer.tsx  landing-header.tsx  motion-primitives.tsx  problem.tsx  trial-pipeline.tsx  verdict-demo.tsx  waitlist.tsx
apps/web/src/components/pwa/: sw-register.tsx
apps/web/src/components/shell/: app-shell.tsx
apps/web/src/components/showcase/: agent-integrations.tsx  mobile-landing.tsx
apps/web/src/components/tribunal/: agent-avatar.tsx  agent-card.tsx  justice-icons.tsx  personas.ts  trust-meter.tsx  verdict-stamp.tsx
apps/web/src/lib/: api.ts  site.ts  use-copy.ts  use-focus-trap.ts  waitlist-email.ts
docs/: ARCHITECTURE.md  LLM_CONTEXT.md  STRUCTURE.md  TARGET_LAYOUT.md  TRIAGE.md
docs/hackathon/: plan.md
integrations/: README.md
integrations/hermes/: README.md  config.yaml
integrations/hermes/skill/: SKILL.md
integrations/openclaw/: README.md  openclaw.json
legacy/: README.md  projectstate.md
scripts/: check_env_keys.py  set_railway_band_env.py  verify_all_keys.py  verify_band_trial.py  verify_llm_keys.py
