[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-council-api"
version = "0.1.0"
description = "FastAPI backend for Code Council"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "google-generativeai>=0.8.0",
  "python-dotenv>=1.0.1",
  "pillow>=10.4.0",
  "requests>=2.32.0",
  "sse-starlette>=2.1.3",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "mcp>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_council*"]
