[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-tribunal"
version = "0.2.0"
description = "Intent-conformance review for AI-generated code — CLI + MCP + web demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "google-generativeai>=0.8.0",
  "python-dotenv>=1.0.1",
  "pillow>=10.4.0",
  "requests>=2.32.0",
  "sse-starlette>=2.1.3",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "mcp>=1.2.0",
]

[project.scripts]
tribunal = "code_council.cli:main"
tribunal-mcp = "code_council.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_council*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
