[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-tribunal"
version = "0.3.0"
description = "Intent-conformance review for AI-generated code — CLI + MCP + web demo"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Arun"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "google-genai>=1.0.0",
  "python-dotenv>=1.0.1",
  "pillow>=10.4.0",
  "requests>=2.32.0",
  "sse-starlette>=2.1.3",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/arun3676/code-tribunal"
Source = "https://github.com/arun3676/code-tribunal"
Issues = "https://github.com/arun3676/code-tribunal/issues"

[project.scripts]
tribunal = "code_council.cli:main"
tribunal-mcp = "code_council.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_council*"]

[tool.setuptools.package-data]
code_council = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
